--- a/index.html
+++ b/index.html
@@ -1,41 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nikanix - Coming Soon</title>
     <style>
-        body {
-            background-color: #0d1117;
-            color: #c9d1d9;
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-            text-align: center;
-        }
-        img {
-            max-width: 300px;
-            margin-bottom: 20px;
-        }
-        h1 {
-            font-size: 36px;
-            margin: 10px 0;
-        }
-        p {
-            font-size: 20px;
-            margin: 10px 0;
-        }
+      body {
+        background-color: #0d1117;
+        color: #c9d1d9;
+        font-family: Arial, sans-serif;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        margin: 0;
+        text-align: center;
+      }
+      svg {
+        width: 300px;
+        height: auto;
+        margin-bottom: 20px;
+      }
+      h1 {
+        font-size: 36px;
+        margin: 10px 0;
+      }
+      p {
+        font-size: 20px;
+        margin: 10px 0;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
+    <!-- Embedded Logo SVG -->
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 100">
+      <rect width="300" height="100" fill="#0d1117" />
+      <text
+        x="50%"
+        y="55%"
+        dominant-baseline="middle"
+        text-anchor="middle"
+        font-size="48"
+        fill="#c9d1d9"
+        font-family="Arial, sans-serif"
+      >
+        NIKANIX
+      </text>
+    </svg>
 
-    <img src="images/logo.png" alt="Nikanix Logo">
     <h1>Welcome to Nikanix</h1>
     <p>Something amazing is coming soon...</p>
-
-</body>
+  </body>
 </html>
