--- a/index_de.html
+++ b/index_de.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nikanix - Customized AI Solutions</title>
+    <title>Nikanix - Individuelle KI-Lösungen</title>
   </head>
   <body
     style="
@@ -22,10 +22,10 @@
   >
     <!-- Language Switcher -->
     <div style="position: absolute; top: 20px; right: 20px">
-      <a href="index_de.html" title="Deutsch" style="text-decoration: none">
+      <a href="index.html" title="English" style="text-decoration: none">
         <img
-          src="images/germany-flag.png"
-          alt="Deutsch"
+          src="images/english-flag.png"
+          alt="English"
           style="
             width: 32px;
             height: 24px;
@@ -54,9 +54,11 @@
         style="width: 220px; height: auto; margin-bottom: 20px"
       />
 
-      <h1 style="font-size: 42px; margin: 10px 0 30px">Welcome to Nikanix</h1>
+      <h1 style="font-size: 42px; margin: 10px 0 30px">
+        Willkommen bei Nikanix
+      </h1>
       <h2 style="font-size: 28px; margin: 0 0 20px; color: #58a6ff">
-        Tailored AI Agents and Robotic Innovations
+        Maßgeschneiderte KI-Agenten und Roboterinnovationen
       </h2>
 
       <div
@@ -74,13 +76,16 @@
           line-height: 1.6;
         "
       >
-        At Nikanix, we build customized AI agents, smart automation systems, and
-        intelligent solutions — tailored to your real-world needs. Our mission
-        is simple: to help you work smarter, reduce costs, save valuable time,
-        and achieve higher precision across your operations. We also rely on
-        AI-driven tools and systems internally, using the same technologies we
-        develop and offer to our customers. With Nikanix, intelligent technology
-        becomes your most reliable partner in growth.
+        Bei Nikanix entwickeln wir maßgeschneiderte KI-Agenten, intelligente
+        Automatisierungssysteme und innovative Lösungen — individuell angepasst
+        an Ihre realen Anforderungen.<br /><br />
+        Unsere Mission ist einfach: Ihnen zu helfen, intelligenter zu arbeiten,
+        Kosten zu senken, wertvolle Zeit zu sparen und eine höhere Präzision in
+        Ihren Prozessen zu erreichen.<br /><br />
+        Wir setzen intern auf dieselben KI-basierten Technologien, die wir auch
+        unseren Kunden anbieten.<br /><br />
+        Mit Nikanix wird intelligente Technologie zu Ihrem zuverlässigsten
+        Partner für Wachstum und Innovation.
       </div>
 
       <ul
@@ -97,28 +102,28 @@
       >
         <li style="margin: 12px 0; position: relative; padding-left: 30px">
           <span style="position: absolute; left: 0; color: #58a6ff">✔️</span>
-          Customized AI Agents & Intelligent Systems
+          Individuelle KI-Agenten & intelligente Systeme
         </li>
         <li style="margin: 12px 0; position: relative; padding-left: 30px">
           <span style="position: absolute; left: 0; color: #58a6ff">✔️</span>
-          AI-Driven Automation for Homes and Businesses
+          KI-gesteuerte Automatisierung für Haushalte und Unternehmen
         </li>
         <li style="margin: 12px 0; position: relative; padding-left: 30px">
           <span style="position: absolute; left: 0; color: #58a6ff">✔️</span>
-          Smart Sensor and Automation Networks
+          Smarte Sensor- und Automationsnetzwerke
         </li>
         <li style="margin: 12px 0; position: relative; padding-left: 30px">
           <span style="position: absolute; left: 0; color: #58a6ff">✔️</span>
-          Intelligent Monitoring and Control Systems
+          Intelligente Überwachungs- und Kontrollsysteme
         </li>
         <li style="margin: 12px 0; position: relative; padding-left: 30px">
-          <span style="position: absolute; left: 0; color: #58a6ff">✔️</span> AI
-          Innovation & Development
+          <span style="position: absolute; left: 0; color: #58a6ff">✔️</span>
+          Innovation & Entwicklung im Bereich KI
         </li>
       </ul>
 
       <footer style="margin-top: 30px; font-size: 13px; color: #6e7681">
-        &copy; 2025 Nikanix. Building our foundation in Munich for the future.
+        &copy; 2025 Nikanix. Aufbau unserer Basis in München für die Zukunft.
       </footer>
     </div>
   </body>
