--- a/index.html
+++ b/index.html
@@ -51,8 +51,13 @@
       <img
         src="images/logo.png"
         alt="Nikanix Logo"
-        style="width: 220px; height: auto; margin-bottom: 20px"
+        style="width: 220px; height: 100px; margin-bottom: 10px"
       />
+
+      <!-- Small text under logo -->
+      <div style="font-size: 14px; color: #8b949e; margin-bottom: 20px">
+        Customized AI Solutions
+      </div>
 
       <h1 style="font-size: 42px; margin: 10px 0 30px">Welcome to Nikanix</h1>
       <h2 style="font-size: 28px; margin: 0 0 20px; color: #58a6ff">
