--- a/index_de.html
+++ b/index_de.html
@@ -48,11 +48,17 @@
       "
     >
       <!-- Logo from images folder -->
+      <!-- Logo from images folder -->
       <img
         src="images/logo.png"
         alt="Nikanix Logo"
-        style="width: 220px; height: auto; margin-bottom: 20px"
+        style="width: 220px; height: 100px; margin-bottom: 10px"
       />
+
+      <!-- Small text under logo -->
+      <div style="font-size: 14px; color: #8b949e; margin-bottom: 20px">
+        Customized AI Solutions
+      </div>
 
       <h1 style="font-size: 42px; margin: 10px 0 30px">
         Willkommen bei Nikanix
