--- a/index_de.html
+++ b/index_de.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <title>Nikanix - Individuelle KI-Lösungen</title>
   </head>
   <body
@@ -47,51 +51,57 @@
         width: 100%;
       "
     >
-      <!-- Logo from images folder -->
-      <!-- Logo from images folder -->
+      <!-- Logo -->
       <img
         src="images/logo.png"
         alt="Nikanix Logo"
-        style="width: 220px; height: 100px; margin-bottom: 10px"
+        style="width: 220px; height: auto; margin-bottom: 10px"
       />
 
-      <!-- Small text under logo -->
-      <div style="font-size: 14px; color: #8b949e; margin-bottom: 20px">
-        Customized AI Solutions
-      </div>
-
-      <h1 style="font-size: 42px; margin: 10px 0 30px">
-        Willkommen bei Nikanix
-      </h1>
-      <h2 style="font-size: 28px; margin: 0 0 20px; color: #58a6ff">
-        Maßgeschneiderte KI-Agenten und Roboterinnovationen
+      <h2 style="font-size: 28px; margin: 0 0 20px">
+        Maßgeschneiderte KI-Agenten und Robotik-Innovationen
       </h2>
 
       <div
         style="
           background-color: rgba(88, 166, 255, 0.05);
           border-radius: 12px;
-          padding: 25px;
-          margin: 20px 0 30px;
-          font-size: 18px;
+          padding: 30px;
+          margin: 30px 0;
+          font-family: 'Poppins', Arial, sans-serif;
+          font-style: italic;
+          font-weight: 300;
+          font-size: 15px;
           color: #c9d1d9;
-          max-width: 600px;
+          max-width: 700px;
           margin-left: auto;
           margin-right: auto;
-          text-shadow: 0 1px 2px rgba(7, 4, 4, 0.3);
-          line-height: 1.6;
+          text-align: justify;
+          text-justify: inter-word;
+          line-height: 1.8;
+          text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
         "
       >
         Bei Nikanix entwickeln wir maßgeschneiderte KI-Agenten, intelligente
         Automatisierungssysteme und innovative Lösungen — individuell angepasst
         an Ihre realen Anforderungen.<br /><br />
-        Unsere Mission ist einfach: Ihnen zu helfen, intelligenter zu arbeiten,
-        Kosten zu senken, wertvolle Zeit zu sparen und eine höhere Präzision in
-        Ihren Prozessen zu erreichen.<br /><br />
-        Wir setzen intern auf dieselben KI-basierten Technologien, die wir auch
-        unseren Kunden anbieten.<br /><br />
+
+        Unsere Mission ist einfach: Ihnen zu helfen, effizienter zu arbeiten,
+        Kosten zu senken, wertvolle Zeit zu sparen und die Präzision Ihrer
+        Abläufe zu erhöhen — während Ihre Daten stets sicher und unter Ihrer
+        Kontrolle bleiben.<br /><br />
+
+        Unsere KI-Lösungen arbeiten direkt in Ihren eigenen Systemen und stellen
+        sicher, dass Ihre Informationen privat, geschützt und exklusiv bei Ihnen
+        bleiben.<br /><br />
+
+        Auch wir setzen intern KI-gestützte Agenten und Werkzeuge ein, um genau
+        die Produkte und Lösungen zu entwickeln, die wir unseren Kunden anbieten
+        — und stärken damit unser Engagement für praktische Innovation und echte
+        Leistungsfähigkeit.<br /><br />
+
         Mit Nikanix wird intelligente Technologie zu Ihrem zuverlässigsten
-        Partner für Wachstum und Innovation.
+        Wachstumspartner.
       </div>
 
       <ul
@@ -108,23 +118,23 @@
       >
         <li style="margin: 12px 0; position: relative; padding-left: 30px">
           <span style="position: absolute; left: 0; color: #58a6ff">✔️</span>
-          Individuelle KI-Agenten & intelligente Systeme
+          Individuelle KI-Agenten und intelligente Systeme
         </li>
         <li style="margin: 12px 0; position: relative; padding-left: 30px">
           <span style="position: absolute; left: 0; color: #58a6ff">✔️</span>
-          KI-gesteuerte Automatisierung für Haushalte und Unternehmen
+          KI-gesteuerte Automatisierung für Zuhause und Unternehmen
         </li>
         <li style="margin: 12px 0; position: relative; padding-left: 30px">
           <span style="position: absolute; left: 0; color: #58a6ff">✔️</span>
-          Smarte Sensor- und Automationsnetzwerke
+          Intelligente Sensor- und Automatisierungsnetzwerke
         </li>
         <li style="margin: 12px 0; position: relative; padding-left: 30px">
           <span style="position: absolute; left: 0; color: #58a6ff">✔️</span>
-          Intelligente Überwachungs- und Kontrollsysteme
+          Überwachung und intelligente Steuerungssysteme
         </li>
         <li style="margin: 12px 0; position: relative; padding-left: 30px">
           <span style="position: absolute; left: 0; color: #58a6ff">✔️</span>
-          Innovation & Entwicklung im Bereich KI
+          KI-Innovation und Entwicklung
         </li>
       </ul>
 
