--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Nikanix - Customized AI Solutions</title>
   </head>
   <body
@@ -51,16 +56,10 @@
       <img
         src="images/logo.png"
         alt="Nikanix Logo"
-        style="width: 220px; height: 100px; margin-bottom: 10px"
+        style="width: 220px; height: auto; margin-bottom: 10px"
       />
 
-      <!-- Small text under logo -->
-      <div style="font-size: 14px; color: #8b949e; margin-bottom: 20px">
-        Customized AI Solutions
-      </div>
-
-      <h1 style="font-size: 42px; margin: 10px 0 30px">Welcome to Nikanix</h1>
-      <h2 style="font-size: 28px; margin: 0 0 20px; color: #58a6ff">
+      <h2 style="font-size: 28px; margin: 0 0 20px">
         Tailored AI Agents and Robotic Innovations
       </h2>
 
@@ -68,24 +67,40 @@
         style="
           background-color: rgba(88, 166, 255, 0.05);
           border-radius: 12px;
-          padding: 25px;
-          margin: 20px 0 30px;
-          font-size: 18px;
+          padding: 30px;
+          margin: 30px 0;
+          font-family: 'Poppins', Arial, sans-serif;
+          font-style: italic;
+          font-weight: 300;
+          font-size: 15px;
           color: #c9d1d9;
-          max-width: 600px;
+          max-width: 700px;
           margin-left: auto;
           margin-right: auto;
-          text-shadow: 0 1px 2px rgba(7, 4, 4, 0.3);
-          line-height: 1.6;
+          text-align: justify;
+          text-justify: inter-word;
+          line-height: 1.8;
+          text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
         "
       >
         At Nikanix, we build customized AI agents, smart automation systems, and
-        intelligent solutions — tailored to your real-world needs. Our mission
-        is simple: to help you work smarter, reduce costs, save valuable time,
-        and achieve higher precision across your operations. We also rely on
-        AI-driven tools and systems internally, using the same technologies we
-        develop and offer to our customers. With Nikanix, intelligent technology
-        becomes your most reliable partner in growth.
+        intelligent solutions — tailored to your real-world needs.<br /><br />
+
+        Our mission is simple: to help you work smarter, reduce costs, save
+        valuable time, and achieve higher precision across your operations —
+        while keeping your data fully protected within your own trusted
+        environment.<br /><br />
+
+        Our AI solutions operate directly inside your systems, ensuring your
+        information remains private, secure, and under your exclusive
+        control.<br /><br />
+
+        We also leverage AI-driven agents and tools ourselves to create and
+        deliver the very products and solutions we offer — strengthening our
+        commitment to practical innovation and real-world performance.<br /><br />
+
+        With Nikanix, intelligent technology becomes your most reliable partner
+        in growth.
       </div>
 
       <ul
