--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Nikanix builds customized AI agents, smart automation, and intelligent robotic solutions tailored for real-world efficiency and data privacy."
+      content="Nikanx builds customized AI agents, smart automation, and intelligent robotic solutions tailored for real-world efficiency and data privacy."
     />
     <meta
       name="keywords"
       content="AI agents, custom AI, automation, robotics, Azure AI, RAG, Munich AI company"
     />
-    <title>Nikanix | Tailored AI Agents & Robotic Innovations</title>
+    <title>Nikanx | Tailored AI Agents & Robotic Innovations</title>
     <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@300;400;500;600;700&display=swap"
@@ -23,8 +23,8 @@
     <!-- HEADER -->
     <header class="header">
       <div class="header-left">
-        <img src="nikanix_logo.png" class="logo" alt="Nikanix Logo" />
-        <span class="brand">NIKANIX</span>
+        <img src="nikanix_logo.png" class="logo" alt="nikanx Logo" />
+        <span class="brand">Nikanx</span>
       </div>
 
       <div class="lang-switch">
@@ -37,7 +37,7 @@
     <section class="hero">
       <h1>Tailored AI Agents and Robotic Innovations</h1>
       <p>
-        At Nikanix, we build customized AI agents, smart automation systems, and
+        At Nikanx, we build customized AI agents, smart automation systems, and
         intelligent solutions — crafted precisely for your real-world needs.
       </p>
       <button
@@ -56,7 +56,7 @@
         valuable time, and reach greater precision — all while keeping your data
         safely inside your trusted environment.
         <br /><br />
-        Nikanix AI runs directly within your systems, ensuring your information
+        Nikanx AI runs directly within your systems, ensuring your information
         stays private, secure, and under your exclusive control.
         <br /><br />
         We also use AI-driven agents internally to build and deliver our own
@@ -76,7 +76,7 @@
         animation-delay: 0.6s;
       "
     >
-      <h2>With Nikanix, Intelligence Becomes Your Competitive Edge</h2>
+      <h2>With Nikanx, Intelligence Becomes Your Competitive Edge</h2>
       <p style="max-width: 700px; margin: 20px auto">
         ✔️ Customized AI Agents & Intelligent Systems<br />
         ✔️ AI-Driven Automation for Homes and Businesses<br />
@@ -90,7 +90,7 @@
     <footer class="footer" style="animation-delay: 0.9s">
       <div class="footer-grid">
         <div>
-          <h3>Nikanix</h3>
+          <h3>Nikanx</h3>
           <p>Tailored AI Agents and Robotic Innovations</p>
 
         <div>
@@ -102,13 +102,13 @@
 
         <div>
           <h3>Contact</h3>
-          <p><a href="mailto:contact@nikanix.com">contact@nikanix.com</a></p>
+          <p><a href="mailto:contact@nikanx.com">contact@nikanx.com</a></p>
           <p>Munich, Germany</p>
         </div>
       </div>
 
       <div class="footer-bottom">
-        © 2025 Nikanix. Building our foundation in Munich for the future.
+        © 2025 Nikanx. Building our foundation in Munich for the future.
       </div>
     </footer>
 
