--- a/index_de.html
+++ b/index_de.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Nikanix entwickelt maßgeschneiderte KI-Agenten, intelligente Automatisierung und robotische Lösungen – mit Fokus auf Datenschutz, Effizienz und reale Anwendungen."
+      content="Nikanx entwickelt maßgeschneiderte KI-Agenten, intelligente Automatisierung und robotische Lösungen – mit Fokus auf Datenschutz, Effizienz und reale Anwendungen."
     />
     <meta
       name="keywords"
       content="KI-Agenten, individuelle KI, Automatisierung, Robotik, Azure AI, RAG, München KI Unternehmen"
     />
-    <title>Nikanix | Maßgeschneiderte KI-Agenten & Robotik-Innovationen</title>
+    <title>Nikanx | Maßgeschneiderte KI-Agenten & Robotik-Innovationen</title>
     <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@300;400;500;600;700&display=swap"
@@ -23,8 +23,8 @@
     <!-- HEADER -->
     <header class="header">
       <div class="header-left">
-        <img src="nikanix_logo.png" class="logo" alt="Nikanix Logo" />
-        <span class="brand">NIKANIX</span>
+        <img src="nikanix_logo.png" class="logo" alt="Nikanx Logo" />
+        <span class="brand">NIKANX</span>
       </div>
 
       <div class="lang-switch">
@@ -37,7 +37,7 @@
     <section class="hero">
       <h1>Individuelle KI-Agenten und Robotik-Innovationen</h1>
       <p>
-        Bei Nikanix entwickeln wir maßgeschneiderte KI-Agenten,
+        Bei Nikanx entwickeln wir maßgeschneiderte KI-Agenten,
         Automatisierungssysteme und intelligente Lösungen – exakt abgestimmt auf
         Ihre realen Anforderungen.
       </p>
@@ -58,7 +58,7 @@
         Präzision zu erreichen – während Ihre Daten jederzeit geschützt in Ihrer
         eigenen Umgebung bleiben.
         <br /><br />
-        Nikanix KI läuft direkt in Ihren Systemen und stellt sicher, dass alle
+        Nikanx KI läuft direkt in Ihren Systemen und stellt sicher, dass alle
         Informationen privat, sicher und ausschließlich unter Ihrer Kontrolle
         bleiben.
         <br /><br />
@@ -79,7 +79,7 @@
         animation-delay: 0.6s;
       "
     >
-      <h2>Mit Nikanix wird Intelligenz zu Ihrem Wettbewerbsvorteil</h2>
+      <h2>Mit Nikanx wird Intelligenz zu Ihrem Wettbewerbsvorteil</h2>
       <p style="max-width: 700px; margin: 20px auto">
         ✔️ Maßgeschneiderte KI-Agenten & intelligente Systeme<br />
         ✔️ KI-basierte Automatisierung für Unternehmen & Privathaushalte<br />
@@ -93,7 +93,7 @@
     <footer class="footer" style="animation-delay: 0.9s">
       <div class="footer-grid">
         <div>
-          <h3>Nikanix</h3>
+          <h3>Nikanx</h3>
           <p>Individuelle KI-Agenten und Robotik-Innovationen</p>
         </div>
 
@@ -106,13 +106,13 @@
 
         <div>
           <h3>Kontakt</h3>
-          <p><a href="mailto:contact@nikanix.com">contact@nikanix.com</a></p>
+          <p><a href="mailto:contact@nikanx.com">contact@nikanx.com</a></p>
           <p>München, Deutschland</p>
         </div>
       </div>
 
       <div class="footer-bottom">
-        © 2025 Nikanix. Mit starken Wurzeln in München – für die Zukunft gebaut.
+        © 2025 Nikanx. Mit starken Wurzeln in München – für die Zukunft gebaut.
       </div>
     </footer>
 
